tests/valid_inputs/unary_star.cpp

int main() {
	int a, *pa = &a;
	*pa = 5;
	return a;
}
