tests/invalid_inputs/sema/plus_equals_into_const.cpp

int main() {
	const int a = 5;
	a += 6;
}
